# financial-monitor

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
server/: config.py  database.py  main.py
server/auth/: crud.py  dependencies.py  models.py  routes.py  schemas.py  tasks.py  utils.py
server/migrations/: env.py
server/migrations/versions/: 4943a2f05706_first_revision.py
