[tool.poetry]
name = "financial-monitor"
version = "0.1.0"
description = "A web app to track and monitor personal finances"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "financial_monitor"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.85.0"}
SQLAlchemy = "^1.4.41"
pymongo = "^4.2.0"
psycopg2 = "^2.9.3"
redis = "^4.3.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pandas = "^1.5.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
celery = "^5.2.7"
strawberry-graphql = {extras = ["debug-server"], version = "^0.133.1"}

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.981"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
