[tool.poetry]
name = "financial-monitor"
version = "0.1.0"
description = "A web app to track and monitor personal finances"
authors = ["rifatrakib <Rakib.1508@outlook.com>"]
license = "Apache License 2.0"
readme = "README.md"
packages = [{include = "financial_monitor"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.85.0"}
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.41"}
pymongo = "^4.2.0"
psycopg2 = "^2.9.3"
redis = "^4.3.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
pandas = "^1.5.0"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"
celery = "^5.2.7"
strawberry-graphql = {extras = ["debug-server"], version = "^0.133.1"}
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
tox = "^3.26.0"
alembic = "^1.8.1"
asyncpg = "^0.26.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.981"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
